--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mysql2": "^3.15.3",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11"
   }
 }
